openmetadata-docs-v1/content/v0.13.3/deployment/upgrade/versions/012-to-013.md
---
title: Upgrade 0.12 to 0.13
slug: /deployment/upgrade/versions/012-to-013
---

# Upgrade from 0.12 to 0.13

Upgrading from 0.12 to 0.13 can be done directly on your instances. This page will list few general details you should take into consideration when running the upgrade.

## 0.13.3 Highlights

### Optimize Memory for Usage Workflow
Implemented better memory management when processing usage data for database connectors

### Bug Fixes
- Fix partition logic when profiling BigQuery table with `_PARTITIONTIME`
- Handle Snowflake overflow error
- Set catalog for Databrick profiler connector

## 0.13.2 Highlights

### Service Connection Updates

- Oracle:
  - Oracle connector now supports thick mode enabled by default.
    - Added: `instantClientDirectory` with the path to the Oracle libraries. They are provided by default for release 19
      in the ingestion container.

- Superset:
  - The Superset connector now supports the ability to extract metadata directly from the database underlying Superset, making it useful for users who have SSO enabled.
    - Added: `connection` field the connection can be of type `ApiConnection`, `postgresConnection` or `mysqlConnection`
    - Removed: `username`, `password` & `provider` fields as now these fields will be part of `ApiConnection`

## 0.13.1 Highlights

### Deprecating botPrincipals from OpenMetadata Configuration

Starting with `0.13.0`, we have deprecated the initial configurations for Authorizer Bot Principals. This means that all 
the configs will be taken care from UI once it's up and running under settings >> bots section. The default once available 
and enabled will be `ingestion-bot` which will have JWT Token configured. You can edit the same for configuring service 
principals instead of using the default JWT Auth mechanism. For more information on configuring Bots, you can 
visit [Enable Security](/deployment/security).

### Service Connection Updates

- Databricks
  - Databricks connector now supports usage and lineage extraction.
    - Added: `supportsUsageExtraction`, `supportsLineageExtraction`

- Dagster
  - Dagster connector now support fetching metadata from dagster cloud.
    - Added: `configSource`
    - Removed: `hostPort`, `numberOfStatus`

- Airbyte
  - Airbyte connector now support Basic Authentication.
    - Added: `username`, `password`

### Lineage Backend

- The import for the Airflow Lineage Backend has been updated from `airflow_provider_openmetadata.lineage.openmetadata.OpenMetadataLineageBackend`
to `airflow_provider_openmetadata.lineage.backend.OpenMetadataLineageBackend`.
- We removed support from Airflow v1.
- The failure callback now only updates the pipeline status if the Pipeline already exists in OpenMetadata.

## Webhooks

OpenMetadata will be deprecating the existing webhooks for Slack, MSTeams.

Before upgrading to 0.13.1 it is recommended to save the existing Webhook configs(like webhook url) to use them later.

We have added Alerts/Notifications , which can be configured to receive customised alerts on updates in OM using Triggers, Filtering Information to different destinations like Slack, MsTeams or even Emails.
Please use the same webhook config that you had saved from previous version to configure the Alerts Destination after upgrading.

### dbt Workflow

- Starting with `0.13.1` dbt ingestion has been separated from the metadata ingestion. It can now be configured as a separate workflow after completing the metadata ingestion workflow
- We will remove the dbt configuration from your existing metadata ingestion pipelines and they will keep working as expected.
- After upgrading you will have to create the dbt workflow for the dbt ingestion to start working again.
- dbt workflow can be configured via going to `services->selecting your service->ingestion tab->Add dbt Ingestion`
